# planetary_terrain_renderer

./: Cargo.toml
examples/: spherical.rs
preprocess/: Cargo.toml
preprocess/src/: cli.rs
src/: plugin.rs  spawn.rs  terrain.rs  util.rs
src/debug/: camera.rs  mod.rs  orbital_camera.rs
src/formats/: tiff.rs
src/picking/: mod.rs
src/preprocess/: mipmap.rs
src/render/: terrain_bind_group.rs  terrain_material.rs  terrain_pass.rs  terrain_view_bind_group.rs  tiling_prepass.rs
src/shaders/: functions.wgsl
src/terrain_data/: gpu_attachment.rs  gpu_tile_atlas.rs  tile_atlas.rs  tile_tree.rs
