[package]
name = "bevy_terrain"
description = "Terrain Rendering for the Bevy Engine."
version = "0.1.0-dev"
license = "MIT OR Apache-2.0"
edition = "2024"
categories = ["game-engines", "rendering", "graphics"]
keywords = ["gamedev", "graphics", "bevy", "terrain"]
exclude = ["assets/*"]
readme = "README.md"
authors = ["Kurt Kühnert <kurt@kuehnert.dev>"]
repository = "https://github.com/kurtkuehnert/bevy_terrain"

[workspace]
members = ["preprocess"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ["cfg(feature, values(\"webgpu\"))"] }

[dependencies]
ron = "0.12"
bevy = "0.18.1"
bevy_common_assets = { version = "0.15.0", features = ["ron"] }
big_space = { version = "0.12", features = ["i32"] }
tiff = "0.10"
bytemuck = "1.14"
ndarray = "0.17"
itertools = "0.14.0"
bitflags = "2.4"
serde = "1.0.210"
async-channel = "2.1"
slab = "0.4.9"
strum = "0.27.1"
strum_macros = "0.27.1"

rand = { version = "0.9.0", optional = true }
wgpu-core = { version = "24.0.2", optional = true } # keep in sync with bevy's wgpu

[[example]]
name = "spherical"
path = "examples/spherical.rs"

[[example]]
name = "precision_demo"
path = "examples/precision_demo.rs"
required-features = ["rand"]
